<resources>
    <string name="app_name">Diabetics Info</string>
    <string name="generateReport">Generate Report</string>
    <string name="inputVitals">Input Vitals</string>
    <string name="medications">Medications</string>
    <string name="inputExcersize">Input Excersize</string>
    <string name="goBack">Back</string>
    <string name="submit">Submit</string>
    <string name="clear">Clear</string>
    <string name="listMeds">List Medications</string>
    <string name="medicationName">Medication</string>
    <string name="amount">Amount</string>
    <string name="blsButton">Blood Sugar Levels</string>
    <string name="bpButton">Blood Pressure</string>
    <string name="vitalBanner">Blood Pressures and Blood Sugars</string>
    <string name="blsInputLabel">Current Reading</string>
    <string name="saveButton">Save</string>
    <string name="label90DayAverage">90 Day Average</string>
    <string name="slLabel">Systolic BP</string>
    <string name="dlLabel">Diastolic BP</string>
</resources>