<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Vitals">

    <Button
        android:id="@+id/bls_button"
        android:layout_width="154dp"
        android:layout_height="58dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="10dp"
        android:hapticFeedbackEnabled="true"
        android:text="@string/blsButton"
        app:layout_constraintBottom_toTopOf="@+id/button12"
        app:layout_constraintEnd_toStartOf="@+id/button11"
        app:layout_constraintHorizontal_bias="0.097"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14"
        app:layout_constraintVertical_bias="0.048" />

    <Button
        android:id="@+id/button11"
        android:layout_width="154dp"
        android:layout_height="58dp"
        android:layout_marginEnd="16dp"
        android:hapticFeedbackEnabled="true"
        android:onClick="goToBloodPressure"
        android:text="@string/bpButton"
        app:layout_constraintBottom_toTopOf="@+id/button12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="375dp"
        android:layout_height="130dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="50dp"
        android:text="@string/vitalBanner"
        android:textDirection="firstStrongLtr"
        android:textSize="24sp"
        android:typeface="serif"
        app:layout_constraintBottom_toTopOf="@+id/button11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="200dp"
        android:text="@string/goBack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>