<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BLS">

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="76dp"
        android:layout_marginBottom="636dp"
        android:labelFor="@id/blsReading"
        android:text="@string/blsInputLabel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/blsReading"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/blsReading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="60dp"
        android:ems="10"
        android:hint="@string/blsInputLabel"
        android:inputType="number"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label90DayAverage" />

    <Button
        android:id="@+id/blsSaveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="180dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="143dp"
        android:layout_marginBottom="520dp"
        android:text="@string/saveButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/blsReading" />

    <TextView
        android:id="@+id/label90DayAverage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="235dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="78dp"
        android:layout_marginBottom="15dp"
        android:text="@string/label90DayAverage"
        app:layout_constraintBottom_toTopOf="@+id/blsReading"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/average90Day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toTopOf="@+id/blsReading"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/label90DayAverage"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>